--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Desafio MundiPagg</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="password">Password</string>
+    <string name="password">Senha</string>
+    <string name="sign_up">Cadastrar</string>
+    <string name="email">Email</string>
+    <string name="name">Nome</string>
 </resources>
