--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="sign_up">Cadastrar</string>
     <string name="email">Email</string>
     <string name="name">Nome</string>
+    <string name="company">Empresa</string>
 </resources>
