Initial sign in flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="email">Email</string>
     <string name="name">Nome</string>
     <string name="company">Empresa</string>
+    <string name="sign_in">Entrar</string>
 </resources>
